all features remain busted; password column still present

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
 	<%= f.label 'tickets' %>
 	<%= f.text_field 'tickets' %> <br>
 	<%= f.label 'password' %> <br>
-	<%= f.text_field 'password' %> <br>
+	<%= f.password_field 'password' %> <br>
 	<%= f.label 'admin?' %>
 	<%= f.check_box 'admin' %> <br>
 	<%= f.submit %>
